--- a/04.파이썬으로 미술 작품 만들기.md
+++ b/04.파이썬으로 미술 작품 만들기.md
@@ -1,1 +1,21 @@
+# turtle
+* turtle 모듈은 파이썬에서 기본적으로 제공하는 기본 모듈로 코드에 따라 그림을 그려주는 모듈입니다.
+* Lib 폴더에 turtle.py 파일이 있습니다.
+* bgcolor("색깔") : 배경색을 정합니다.
+* color("색깔) : 선색을 정합니다.
+* forward(숫자) : 앞으로 이동합니다.
+* left(숫자) : 왼쪽으로 회전합니다.
+* right(숫자) : 오른쪽으로 회전합니다.
+* speed(숫자) : 화면에 움직임을 표현하는 속도를 정합니다.
 
+## 사각형 그리기
+```python
+from turtle import *
+
+bgcolor("black")
+color("yellow")
+speed(10)
+for i in range(4):
+  forward(100)
+  left(90)
+```
