Update 04.파이썬으로 미술 작품 만들기.md

--- a/04.파이썬으로 미술 작품 만들기.md
+++ b/04.파이썬으로 미술 작품 만들기.md
@@ -7,6 +7,8 @@
 * left(숫자) : 왼쪽으로 회전합니다.
 * right(숫자) : 오른쪽으로 회전합니다.
 * speed(숫자) : 화면에 움직임을 표현하는 속도를 정합니다.
+* exitonclick() : 창을 클릭할 때까지 기다리다가 클릭하면 창이 닫힙니다.
+  * VSCODE에서 프로그램이 다 끝나면 자동으로 창이 꺼지기 때문에 이 함수를 사용합니다.   
 
 ## 사각형 그리기
 ```python
@@ -14,8 +16,24 @@ from turtle import *
 
 bgcolor("black")
 color("yellow")
-speed(10)
+speed(30)
 for i in range(4):
-  forward(100)
+  forward(200)
   left(90)
+exitonclick()
 ```
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/d0e82ff3-2c6e-4125-a5f3-e068830848f4)
+
+## 다양한 그림 그리기
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/6cf53c2b-6908-47c0-9929-f133558f64c2)  
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/600805d1-f64c-4abe-b0ae-48679c27017a)   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/28a1a50e-2fba-44fd-8740-3976021456cb)
+
+# 파이썬으로 미술 작품 만들기
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/37c12212-97a7-4e2d-9227-477434cc63ec)
+
+
+
+
+
+
