--- a/01.파이썬 첫걸음.md
+++ b/01.파이썬 첫걸음.md
@@ -1,5 +1,31 @@
 # 파이썬의 특징
+* 파이썬(python)은 네덜란드 개발자 귀도 반 로섬(Guido van Rossum)이 만든 프로그래밍 언어
+* 오픈소스 소프트웨어
+* 문법이 쉽고 단순합니다.
+* 라이브러리가 다양합니다.
+* GUI 프로그래밍, 웹 프로그래밍, 빅데이터, 머신러닝 등 다양한 분야에서 사용할 수 있습니다.
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/a6eada33-1b08-41e9-92d0-74e733f8a261)
 
 # 아나콘다 설치하기
+* 아나콘다를 검색해서 설치 파일을 다운로드 받습니다.
+* 설치 경로에 한글이 있는 경우 파이썬 프로그램을 실행했을 때 에러가 날 수 있습니다.
+* c 드라이브에 anaconda3 폴더를 만들어서 설치하는 것이 프로그램 파일을 찾는데 편합니다.
+* 환경변수(PATH)에 추가합니다.
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/68a324e7-d573-45fc-8aa9-0ff2200155f2)
 
 # VSCODE 설치하기
+* 마이크로소프트에서 개발한 코드 편집기입니다.
+* MIT 라이센스로 오픈소스로 공개되어 있으며, 무료로 사용할 수 있습니다.
+* VSCODE를 검색해서 설치 파일을 다운로드 받습니다.
+* 확장 프로그램에서 python을 검색하고 설치합니다.
+  * 파이썬 코딩을 더 쉽게 할 수 있도록 도와줍니다.
+* File > Preferences > Settings에서 여러 설정을 할 수 있습니다.
+* Ctrl + 또는 –로 VSCODE 글자 크기를 바꿀 수 있습니다.
+* Tab과 Shfit+Tab으로 들여쓰기와 내어쓰기를 합니다.
+
+# 구글 코랩 사용하기
+* 구글이 제공하는 클라우드 기반 Jupyter Notebook 환경입니다.
+* 웹 브라우저에서 Python 코드를 작성하고 실행할 수 있습니다.
+* 머신 러닝, 딥 러닝, 데이터 분석 등의 작업을 수행할 때 유용합니다.
+* 구글 계정이 있으면 사용할 수 있습니다.
+* 런타임 > 런타임 유형 변경 > GPU를 선택해서 사용할 수 있습니다.(머신러닝 등)
