Update 04.파이썬으로 미술 작품 만들기.md

--- a/04.파이썬으로 미술 작품 만들기.md
+++ b/04.파이썬으로 미술 작품 만들기.md
@@ -1,4 +1,4 @@
-# turtle
+# turtle 모듈
 * turtle 모듈은 파이썬에서 기본적으로 제공하는 기본 모듈로 코드에 따라 그림을 그려주는 모듈입니다.
 * Lib 폴더에 turtle.py 파일이 있습니다.
 * bgcolor("색깔") : 배경색을 정합니다.
