--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -1,1 +1,5 @@
-
+* VSCODE에서 설정합니다.
+* Ctrl + Shift + P 단축키로 명령 팔레트를 엽니다.
+* select default profile을 검색하고 ```Terminal : Select Default Profile```을 선택합니다.
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/72e26a0a-3f44-45a9-bd0a-cf704b9f1c8a)
+ 
