--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -1,2 +1,4 @@
 * python -m ipykernel install --user --name opencv --display-name "opencv"
 * jupyter kernelspec uninstall 가상환경이름
+* !로 설치한다. !pip install opencv-python
+* 
