--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -5,3 +5,7 @@
   * jupyter notebook을 실행한 경로에서 주피터 노트북이 열립니다.
   * 윈도우의 경우 Shift키 누른 채로 마우스 오른쪽 버튼을 클릭하면 PowerShell 창 열기 메뉴를 선택할 수 있습니다.
   * 터미널 창을 닫지 않습니다.  *   
+
+
+# 그림 그리기
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/c357fb4c-2d69-42ed-945c-99f189b719f9)
