--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -1,10 +1,17 @@
-* python -m ipykernel install --user --name opencv --display-name "opencv"
-* jupyter kernelspec uninstall 가상환경이름
-* !로 설치한다. !pip install opencv-python
+# OpenCV 설치하기
+* Anaconda Prompt나 명령 프롬프트(cmd)를 실행합니다.
+* ```pip install opencv-python``` 명령어로 설치합니다.
+* 가상환경을 사용하는 경우 가상환경을 만들고 활성화해서 설치합니다.
+ * conda create -n opencv
+ * 주피터 커널에 연결합니다. 
+  * python -m ipykernel install --user --name opencv --display-name "opencv"
+ * ```jupyter kernelspec uninstall 가상환경이름```으로 커널 연결을 삭제합니다.
 * 터미널에서 ```jupyter notebook```으로 주피터 노트북을 실행합니다.
   * jupyter notebook을 실행한 경로에서 주피터 노트북이 열립니다.
   * 윈도우의 경우 Shift키 누른 채로 마우스 오른쪽 버튼을 클릭하면 PowerShell 창 열기 메뉴를 선택할 수 있습니다.
-  * 터미널 창을 닫지 않습니다.  *   
+  * 터미널 창을 닫지 않습니다.
+ 
+# 주피터 노트북 링크
 
 
 # 그림 그리기
