--- a/21.OpenCV로 사진 탐색하기.md
+++ b/21.OpenCV로 사진 탐색하기.md
@@ -1,1 +1,2 @@
-
+# 주피터 노트북 링크
+* https://github.com/jerrytohub/python-ai/blob/main/ipynb/21.OpenCV%EB%A1%9C%20%EC%82%AC%EC%A7%84%20%ED%83%90%EC%83%89%ED%95%98%EA%B8%B0.ipynb
