--- a/22.OpenCV로 얼굴 인식하기.md
+++ b/22.OpenCV로 얼굴 인식하기.md
@@ -1,1 +1,2 @@
-
+# 주피터 노트북 링크
+* https://github.com/jerrytohub/python-ai/blob/main/ipynb/22.OpenCV%EB%A1%9C%20%EC%96%BC%EA%B5%B4%20%EC%9D%B8%EC%8B%9D%ED%95%98%EA%B8%B0.ipynb
