--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -2,7 +2,10 @@
 * Anaconda Prompt나 명령 프롬프트(cmd)를 실행합니다.
 * ```pip install opencv-python``` 명령어로 설치합니다.
 * 가상환경을 사용하는 경우 가상환경을 만들고 활성화해서 설치합니다.
- * conda create -n opencv
+ * conda create -n opencv python=3.9
+  * 얼굴 필터 만들 때 사용할 mediapipe 라이브러리가 현재 파이썬 3.8~3.11버전에서 작동합니다.
+   * https://developers.google.com/mediapipe/solutions/setup_python
+   * 나중에 사용할 수 있는 버전은 바뀔 수 있습니다.    
  * 주피터 커널에 연결합니다. 
   * python -m ipykernel install --user --name opencv --display-name "opencv"
  * ```jupyter kernelspec uninstall 가상환경이름```으로 커널 연결을 삭제합니다.
