--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -13,6 +13,28 @@
   * jupyter notebook을 실행한 경로에서 주피터 노트북이 열립니다.
   * 윈도우의 경우 Shift키 누른 채로 마우스 오른쪽 버튼을 클릭하면 PowerShell 창 열기 메뉴를 선택할 수 있습니다.
   * 터미널 창을 닫지 않습니다.
+
+# 주피터 노트북 기초 사용법
+* ```pip install jupyter```로 Jupyter를 설치합니다. 
+ * Jupyter는 다른 모듈이 많이 필요해서 설치하는데 시간이 조금 오래 걸립니다.
+ * * 아나콘다를 설치하면 Jupyter가. 함께 설치됩니다.
+* 터미널에서 ```jupyter notebook```로 Jupyter Notebook를 실행합니다.
+* 터미널을 실행한 경로에서 Jupyter Notebook이 열립니다.
+* Jupyter Notebook 이용할 때 터미널은 닫지 않습니다.
+* ```New > Folder```를 선택해서 폴더를 만들 수 있습니다.
+* Rename를 선택하면 폴더 이름을 바꿀 수 있습니다.
+* ```New > Python3```를 선택해서 파이썬 파일을 만듭니다.
+* 셀에 파이썬 코드를 입력하고 ```Shift+Enter``` 또는 ```Ctrl+Enter```를 누르면 파이썬 코드가 실행됩니다.
+* 셀에 별표표시(*)가 나오면 명령어가 실행중이라는 뜻이다.
+* Jupyter Notebook 옆에 있는 번호는 코드가 실행된 순서를 나타냅니다.
+* 편집모드에서 ```ESC```를 누르면 명령모드로 바뀝니다.
+* 명령모드에서 ```Enter```를 누르면 편집모드로 바뀝니다.
+* 모드가 바뀔 때마다 셀 색깔이 바뀝니다.
+* 명령모드에서 ```화살표키```로 이동합니다.
+* 명령모드에서 ```A```를 누르면 셀 위에 새로운 셀이 생깁니다.
+* 명령모드에서 ```B```를 누르면 셀 아래에 새로운 셀이 생깁니다.
+* 명령모드에서 ```DD```를 누르면 셀이 삭제됩니다.
+* Jupyter Notebook에서 ```!pip install 모듈이름```으로 모듈을 설치할 수 있습니다.
  
 # 주피터 노트북 링크
 * https://github.com/jerrytohub/python-ai/blob/main/ipynb/20.OpenCV%20%EC%82%AC%EC%9A%A9%EB%B0%A9%EB%B2%95.ipynb
