--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -33,7 +33,8 @@
 * 명령모드에서 ```화살표키```로 이동합니다.
 * 명령모드에서 ```A```를 누르면 셀 위에 새로운 셀이 생깁니다.
 * 명령모드에서 ```B```를 누르면 셀 아래에 새로운 셀이 생깁니다.
-* 명령모드에서 ```DD```를 누르면 셀이 삭제됩니다.
+* 명령모드에서 ```X```를 누르면 셀이 삭제됩니다.
+ * 아니면 D를 빠르게 두번(DD) 누릅니다. 
 * Jupyter Notebook에서 ```!pip install 모듈이름```으로 모듈을 설치할 수 있습니다.
  
 # 주피터 노트북 링크
