Update 23.OpenCV로 얼굴 필터 만들기.md

--- a/23.OpenCV로 얼굴 필터 만들기.md
+++ b/23.OpenCV로 얼굴 필터 만들기.md
@@ -1,2 +1,2 @@
-# 주피터 노트 링크
+# 주피터 노트북 링크
 * https://github.com/jerrytohub/python-ai/blob/main/ipynb/23.OpenCV%EB%A1%9C%20%EC%96%BC%EA%B5%B4%20%ED%95%84%ED%84%B0%20%EB%A7%8C%EB%93%A4%EA%B8%B0.ipynb
