--- a/20.OpenCV 사용방법.md
+++ b/20.OpenCV 사용방법.md
@@ -17,7 +17,7 @@
 # 주피터 노트북 기초 사용법
 * ```pip install jupyter```로 Jupyter를 설치합니다. 
  * Jupyter는 다른 모듈이 많이 필요해서 설치하는데 시간이 조금 오래 걸립니다.
- * * 아나콘다를 설치하면 Jupyter가. 함께 설치됩니다.
+ * * 아나콘다를 설치하면 Jupyter가 함께 설치됩니다.
 * 터미널에서 ```jupyter notebook```로 Jupyter Notebook를 실행합니다.
 * 터미널을 실행한 경로에서 Jupyter Notebook이 열립니다.
 * Jupyter Notebook 이용할 때 터미널은 닫지 않습니다.
