Update 24.OpenCV로 사물 인식하기.md

--- a/24.OpenCV로 사물 인식하기.md
+++ b/24.OpenCV로 사물 인식하기.md
@@ -20,7 +20,7 @@
     * ```python detect.py --weights yolov5s.pt --source 파일이름``` 
     * runs\detect 폴더 아래에 결과가 저장됩니다.
 
-## 데이터셋 학습
+# 코랩에서 학습하기
 * 구글 코랩에서 학습을 하겠습니다.
 * 학습을 시키기 위해서 데이터가 필요합니다.
 * https://public.roboflow.com// 에서 데이터를 다운로드 받습니다.
@@ -68,5 +68,5 @@
     * 웹캠으로 과일 사진을 촬영해서 테스트합니다.
     * ```python detect.py --weights best.pt --source 0```
 
-# 사진이나 영상으로 테스트하기
+## 사진이나 영상으로 테스트하기
 * 학습한 모델로 테스트를 하고 그 결과를 스크린샷으로 저장하세요.
