Update 24.OpenCV로 사물 인식하기.md

--- a/24.OpenCV로 사물 인식하기.md
+++ b/24.OpenCV로 사물 인식하기.md
@@ -30,7 +30,7 @@
     * 파일 형식은 YOLO v5 PyTorch를 선택합니다.
     * show download code를 선택합니다.
     * Terminal을 선택합니다.
-        * curl -L "https://public.roboflow.com/ds/sStLoPzD0P?key=gtR4lPpiEY" > roboflow.zip; unzip roboflow.zip; rm roboflow.zip
+        * ```curl -L "https://public.roboflow.com/ds/sStLoPzD0P?key=gtR4lPpiEY" > roboflow.zip; unzip roboflow.zip; rm roboflow.zip```
 * 코랩에서 GPU를 선택합니다.
 * !를 먼저 입력하고 복사한 명령어를 붙여넣습니다. !curl ~~
 * content 폴더에 train과 valid 폴더가 생깁니다.
