Update 24.OpenCV로 사물 인식하기.md

--- a/24.OpenCV로 사물 인식하기.md
+++ b/24.OpenCV로 사물 인식하기.md
@@ -61,8 +61,9 @@
 * ```python detect.py --weights yolov5s.pt --source 0``` 명령어를 복사해서 사용합니다.
 * ```python detect.py --weights 학습파일경로 --source 사진경로``` 명령어로 확인해봅니다.
 * ```python detect.py --weights ./runs/train/fruit_yolov5s_results/weights/best.pt --source /remon.jpg``` 명령어로 확인해봅니다.
+   * 코랩에서는 !를 붙입니다.    
 * 확률을 정할 수 있습니다.
-    * ```python detect.py --weights ./runs/train/fruit_yolov5s_results/weights/best.pt --cof 0.5 --source /lemon.jpg``
+    * ```python detect.py --weights ./runs/train/fruit_yolov5s_results/weights/best.pt --cof 0.5 --source /lemon.jpg```
 * 사물인식 결과가 저장되는 경로에 들어가서 확인합니다.
 * best.pt 파일을 다운로드 받고 yolov5s.pt 대신에 사용해봅니다.
     * 웹캠으로 과일 사진을 촬영해서 테스트합니다.
