--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -1,1 +1,16 @@
-
+# Streamlit 이해하기
+* 데이터 스크립트를 웹 앱으로 만들어주는 프레임워크입니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/819d6789-0d8d-4f02-8840-e7131bcfe8a4)
+* 파이썬으로 웹페이지를 만들어서 배포할 수 있습니다.
+* HTML, CSS, Javascript와 같은 웹 기술을 알지 못해도 웹페이지를 만들어서 배포할 수 있습니다.
+* 데이터 시각화, 머신러닝 관련된 것을 웹페이지로 만들어서 공유할 수 있습니다.
+* 사용방법이 간단합니다.
+  * https://docs.streamlit.io/
+  * 공식문서에 사용방법이 자세하게 나와있습니다.
+ 
+# Streamlit 사용하기
+* ```pip install streamlit```으로 설치합니다.
+  * 가상환경을 사용하는 경우 가상환경을 활성화해서 설치합니다.
+ 
+* 
+* https://streamlit.io/ 사이트에 들어가서 회원가입을 합니다.
