--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -8,9 +8,19 @@
   * https://docs.streamlit.io/
   * 공식문서에 사용방법이 자세하게 나와있습니다.
  
-# Streamlit 사용하기
+# Streamlit 설치하기
 * ```pip install streamlit```으로 설치합니다.
-  * 가상환경을 사용하는 경우 가상환경을 활성화해서 설치합니다.
- 
-* 
-* https://streamlit.io/ 사이트에 들어가서 회원가입을 합니다.
+  * 가상환경을 사용하는 경우 가상환경을 활성화하고 pip 명령어로 설치합니다.
+* 터미널에서 ```streamlit hello``` 명령어를 입력합니다.
+ * 데모 웹페이지가 열립니다.
+ * 여기 데모 웹페이지처럼 파이썬으로 웹페이지를 만들 수 있습니다.
+* 성능 향상을 위해서 watchdog을 설치합니다.
+ * ```pip install watchdog```
+
+# Streamlit 기초
+* C드라이브에 streamlit 폴더를 만듭니다.
+* VSCODE를 실행합니다.
+* app.py 파일을 만듭니다.
+```python
+import streamlit as st
+
