--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -24,3 +24,24 @@
 ```python
 import streamlit as st
 
+# 제목입니다.
+st.title('제목입니다.')
+
+# header입니다.
+st.header('헤더입니다.')
+
+# 일반 텍스트입니다.
+st.text('텍스트입니다.')
+
+# 코드를 표시합니다.
+sample_code = '''
+def function():
+    print('hello world')
+'''
+
+st.code(sample_code, language='python')
+```
+* 터미널에서 ```streamlit run app.py``` 명령어를 실행합니다.
+ * 그러면 웹페이지가 열립니다.
+ * Ctrl + C로 정지합니다. 
+
