--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -43,5 +43,29 @@ st.code(sample_code, language='python')
 ```
 * 터미널에서 ```streamlit run app.py``` 명령어를 실행합니다.
  * 그러면 웹페이지가 열립니다.
- * Ctrl + C로 정지합니다. 
+ * Ctrl + C로 정지합니다.
+* 코드를 바꾸고 저장하고 웹페이지에서 rerun을 클릭하면 새로고침이 됩니다.
+
+# 데이터 나타내기
+* dataframe으로 데이터를 나타냅니다.
+ * dataframe에 데이터프레임을 넣습니다.
+ * use_container_width을 설정합니다.
+  * True로 하면 전체 너비를 사용합니다.
+  * False로 하면 전체 너비를 사용하지 않습니다.
+```python
+import pandas as pd
+import numpy as np
+import streamlit as st
+
+st.title('데이터 나타내기')
+
+df = pd.DataFrame({
+    'first' : [1, 2, 3, 4],
+    'second' : [5, 6, 7, 8]
+})
+
+st.dataframe(df, use_container_width=True)
+```
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/93b39b0a-b263-468d-b68b-c4ec09967dfe)
+
 
