--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -44,7 +44,7 @@ st.code(sample_code, language='python')
 * 터미널에서 ```streamlit run app.py``` 명령어를 실행합니다.
  * 그러면 웹페이지가 열립니다.
  * Ctrl + C로 정지합니다.
-* 코드를 바꾸고 저장하고 웹페이지에서 rerun을 클릭하면 새로고침이 됩니다.
+* 코드를 바꾸고 저장하고 웹페이지에서 Rerun을 클릭하면 새로고침이 됩니다.
 
 # 데이터 나타내기
 * dataframe으로 데이터를 나타냅니다.
@@ -52,6 +52,7 @@ st.code(sample_code, language='python')
  * use_container_width을 설정합니다.
   * True로 하면 전체 너비를 사용합니다.
   * False로 하면 전체 너비를 사용하지 않습니다.
+ * 정렬 등을 할 수 있습니다.
 ```python
 import pandas as pd
 import numpy as np
@@ -67,5 +68,89 @@ df = pd.DataFrame({
 st.dataframe(df, use_container_width=True)
 ```
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/93b39b0a-b263-468d-b68b-c4ec09967dfe)
+
+* table로 표로 나타냅니다.
+```python
+import pandas as pd
+import numpy as np
+import streamlit as st
+
+st.title('데이터 나타내기')
+
+df = pd.DataFrame({
+    'first' : [1, 2, 3, 4],
+    'second' : [5, 6, 7, 8]
+})
+
+st.table(df)
+```
+
+# 자주 사용하는 위젯
+* 버튼입니다.
+* 버튼을 클릭하면 버튼 아래에 '버튼을 눌렀습니다.'라는 글씨가 나옵니다.
+```python
+button = st.button('버튼을 누르세요')
+
+if button:
+    st.write('버튼을 눌렀습니다.')
+```
+
+* 다운로드 버튼입니다.
+``` python
+st.download_button(
+    label='다운로드',
+    data=df.to_csv(),
+    file_name='data.csv',
+    mime='text/csv'
+)
+```
+
+* 체크박스입니다.
+```python
+agree = st.checkbox('동의 하십니까?')
+
+if agree:
+    st.write('동의하셨습니다.')
+```
+
+* 라디오 버튼입니다.
+```python
+# 라디오 선택 버튼
+mbti = st.radio(
+    '당신의 좋아하는 과일은?',
+    ('수박', '사과', '포도'))
+
+if mbti == '수박':
+    st.write('수박을 좋아합니다.')
+elif mbti == '사과':
+    st.write('사과를 좋아합니다.')
+else:
+    st.write("포도를 좋아합니다.")
+```
+
+* 텍스트 입력입니다.
+* HTML에서 input 태그입니다.
+```python
+text_input = st.text_input(
+    label='좋아하는 과일은 무엇인가요?', 
+    placeholder='좋아하는 과일을 입력해주세요'
+)
+# 문자열 포맷팅입니다.
+st.write(f'당신이 선택한 과일: [{text_input}]')
+```
+
+* 숫자 입력합니다.
+* HTML에서 input 태그입니다.
+```python
+number_input = st.number_input(
+    label='나이를 입력해 주세요.', 
+    min_value=10, 
+    max_value=100, 
+    value=30,
+    step=5
+)
+st.write('당신이 입력하신 나이는:  ', number_input)
+```
+
 
 
