--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -141,16 +141,21 @@ st.write(f'당신이 선택한 과일: [{text_input}]')
 
 * 숫자 입력합니다.
 * HTML에서 input 태그입니다.
+* value는 기본 입력값입니다.
+* step은 숫자가 움직이는 단위입니다.
 ```python
 number_input = st.number_input(
     label='나이를 입력해 주세요.', 
     min_value=10, 
     max_value=100, 
     value=30,
-    step=5
+    step=1
 )
 st.write('당신이 입력하신 나이는:  ', number_input)
 ```
 
-
-
+# 섭씨 화씨 변환기 만들기
+* 섭씨를 화씨로, 화씨를 섭씨로 바꾸는 앱을 만들어보세요.
+* 숫자를 입력합니다.
+* (화씨 − 32) / 1.8 = 섭씨
+* 섭씨 * 1.9 + 32 = 화씨
