--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -1,4 +1,5 @@
-# Streamlit 이해하기
+# Streamlit
+## Streamlit 이해하기
 * 데이터 스크립트를 웹 앱으로 만들어주는 프레임워크입니다.   
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/819d6789-0d8d-4f02-8840-e7131bcfe8a4)
 * 파이썬으로 웹페이지를 만들어서 배포할 수 있습니다.
@@ -8,7 +9,7 @@
   * https://docs.streamlit.io/
   * 공식문서에 사용방법이 자세하게 나와있습니다.
  
-# Streamlit 설치하기
+## Streamlit 설치하기
 * ```pip install streamlit```으로 설치합니다.
   * 가상환경을 사용하는 경우 가상환경을 활성화하고 pip 명령어로 설치합니다.
 * 터미널에서 ```streamlit hello``` 명령어를 입력합니다.
@@ -17,7 +18,7 @@
 * 성능 향상을 위해서 watchdog을 설치합니다.
  * ```pip install watchdog```
 
-# Streamlit 기초
+## Streamlit 기초
 * C드라이브에 streamlit 폴더를 만듭니다.
 * VSCODE를 실행합니다.
 * app.py 파일을 만듭니다.
@@ -46,7 +47,7 @@ st.code(sample_code, language='python')
  * Ctrl + C로 정지합니다.
 * 코드를 바꾸고 저장하고 웹페이지에서 Rerun을 클릭하면 새로고침이 됩니다.
 
-# 데이터 나타내기
+## 데이터 나타내기
 * dataframe으로 데이터를 나타냅니다.
  * dataframe에 데이터프레임을 넣습니다.
  * use_container_width을 설정합니다.
@@ -85,7 +86,7 @@ df = pd.DataFrame({
 st.table(df)
 ```
 
-# 자주 사용하는 위젯
+## 자주 사용하는 위젯
 * 버튼입니다.
 * 버튼을 클릭하면 버튼 아래에 '버튼을 눌렀습니다.'라는 글씨가 나옵니다.
 ```python
