--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -117,17 +117,35 @@ if agree:
 * 라디오 버튼입니다.
 ```python
 # 라디오 선택 버튼
-mbti = st.radio(
+fruits = st.radio(
     '당신의 좋아하는 과일은?',
     ('수박', '사과', '포도'))
 
-if mbti == '수박':
+if fruits == '수박':
     st.write('수박을 좋아합니다.')
-elif mbti == '사과':
+elif fruits == '사과':
     st.write('사과를 좋아합니다.')
 else:
     st.write("포도를 좋아합니다.")
 ```
+
+* 선택 박스입니다.
+* index는 기본 선택 인덱스입니다.
+```python
+# 라디오 선택 버튼
+fruits = st.selectbox(
+    '당신이 좋아하는 과일은 무엇입니까?',
+    ('수박', '사과', '포도'), 
+    index=2
+)
+
+if fruits == '수박':
+    st.write('수박을 좋아합니다.')
+elif fruits == '사과':
+    st.write('사과를 좋아합니다.')
+else:
+    st.write("포도를 좋아합니다.")
+```  
 
 * 텍스트 입력입니다.
 * HTML에서 input 태그입니다.
