Update 16.streamlit으로 웹페이지 만들기.md

--- a/16.streamlit으로 웹페이지 만들기.md
+++ b/16.streamlit으로 웹페이지 만들기.md
@@ -1,3 +1,54 @@
 # Streamlit 웹페이지 만들기
+## 한글 폰트 적용하기
+* 데이터 시각화할 때 한글을 입력하면 폰트가 깨지는 경우가 있습니다.
+* 나중에 웹페이지로 업로드할 때 한글 폰트가 깨지는 경우가 있습니다.
+* 한글 폰트를 다운로드 받아서 사용합니다.
+  * fonts 폴더를 만들어서 폰트를 놓습니다. 
+```python
+import streamlit as st 
+import matplotlib.pyplot as plt 
+import seaborn as sns 
+import numpy as np 
+
+# 한글폰트를 적용하겠습니다.
+# 현재 경로를 알기 위해서 os 모듈을 import 합니다.
+import os
+# 폰트 관련 설정을 해줍니다.
+import matplotlib.font_manager as fm  
+
+# 중복되지 않고 유일한 값을 반환합니다.
+def unique(list):
+    x = np.array(list)
+    return np.unique(x)
+
+# 폰트를 등록합니다.
+# os.getcwd()는 현재 경로입니다.
+font_dirs = [os.getcwd() + '/fonts']
+
+# 현재 경로에 있는 fonts 폴더에서 폰트를 찾습니다.
+font_files = fm.findSystemFonts(fontpaths=font_dirs)
+
+# 폰트 매니저에 찾은 폰트를 추가합니다.
+for font_file in font_files:
+    fm.fontManager.addfont(font_file)
+fm._load_fontmanager(try_read_cache=False)
+fontNames = [f.name for f in fm.fontManager.ttflist]
+
+# 폰트 이름으로 선택 박스를 만듭니다.
+fontname = st.selectbox("폰트 선택", unique(fontNames))
+
+# 선택을 해서 fontname이 바뀌면 폰트가 바뀝니다.
+plt.rc('font', family=fontname)
+
+# seaborn 모듈에서 tips 관련 데이터를 가져옵니다.
+# tips 데이터를 시각화합니다.
+tips = sns.load_dataset("tips")
+fig, ax = plt.subplots()
+sns.scatterplot(data=tips, x = 'total_bill', y = 'tip', hue='day')
+ax.set_title("한글 폰트 테스트")
+st.pyplot(fig)
+st.dataframe(tips)
+```
+
 ## 데이터 시각화
 
