--- a/16.streamlit으로 웹페이지 만들기.md
+++ b/16.streamlit으로 웹페이지 만들기.md
@@ -170,7 +170,99 @@ ax.legend()
 
 st.pyplot(fig)
 ```
+## requirements.txt
+* 관련된 모듈을 설치하도록 requirements.txt을 만들고 아래와 같이 입력합니다.
+```
+altair==4.2.0
+attrs==22.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+bitlyshortener==0.6.4
+blinker==1.5
+cachetools==5.2.1
+charset-normalizer==3.0.1
+click==8.1.3
+commonmark==0.9.1
+contourpy==1.0.7
+cycler==0.11.0
+decorator==5.1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+finance-datareader==0.9.50
+fonttools==4.38.0
+gitdb==4.0.10
+GitPython==3.1.30
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lxml==4.9.2
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+numpy==1.24.1
+openpyxl==3.0.10
+packaging==23.0
+pandas==1.5.3
+Pillow==9.4.0
+pkgutil_resolve_name==1.3.10
+plotly==5.12.0
+protobuf==3.20.3
+pyarrow==10.0.1
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+requests==2.28.2
+requests-file==1.5.1
+rich==13.1.0
+seaborn==0.12.2
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.3.2.post1
+streamlit==1.17.0
+tenacity==8.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
+zipp==3.11.0
+```
 
 ## 웹페이지 업로드 하기
 * 깃허브에 가입을 합니다.
-* 새로운 
+* 새로운 레파지토리를 만듭니다.
+ * 레파지토리는 저장소입니다.    
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/3011fb0d-ceff-4f81-b892-da5428e1730b)
+* 이름을 정하고 만듭니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/e07cb6e6-82d2-4775-96cf-6aa5f2631c18)
+* 파일을 업로드 합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/06153ddb-d6ee-43da-8ee6-5b922150d8b6)
+* 드래그 해서 파일과 폴더를 업로드 합니다.
+ * 용량이 25MB가 넘으면 안됩니다.  
+* Commit(~하다)을 클릭합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/f251c280-ea60-4018-ad78-122e8e36d9f2)
+* https://streamlit.io/ 사이트에 들어갑니다.
+* 가입을 합니다.
+ * 구글 계정이 있으면 간편하게 가입할 수 있습니다.
+ * south korea를 선택합니다.
+* New app을 클릭합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/a3808a8d-13dc-4763-a57a-12fb9008b43c)
+* 깃허브와 연결합니다.
+* 권한을 승인해줍니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/45ae1768-53b6-473f-a040-e2afb4d0eea9)
+* 레파지토리, 파일 이름, URL 등을 선택합니다.
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/ff985407-21d4-47dd-8b58-53b6bfdd8126)
+* 배포되는데 시간이 조금 걸립니다.
