Update 17.기업 연봉 예측 검색기 만들기.md

--- a/17.기업 연봉 예측 검색기 만들기.md
+++ b/17.기업 연봉 예측 검색기 만들기.md
@@ -1,1 +1,8 @@
+# 기업 연봉 예측 검색기 만들기
+## 공공 데이터 가져오기
+* 공공 데이터 포털 사이트에 들어갑니다.
+  * https://www.data.go.kr/
+* ```국민연금 가입 사업장 내역```을 검색합니다.
+* CSV 파일을 다운로드 합니다.
+
 
