Update 17.기업 연봉 예측 검색기 만들기.md

--- a/17.기업 연봉 예측 검색기 만들기.md
+++ b/17.기업 연봉 예측 검색기 만들기.md
@@ -1,11 +1,14 @@
-# 기업 연봉 예측 검색기 만들기
-## 공공 데이터 가져오기
+# 공공 데이터 가져오기
 * 공공 데이터 포털 사이트에 들어갑니다.
   * https://www.data.go.kr/
 * ```국민연금 가입 사업장 내역```을 검색합니다.
 * CSV 파일을 다운로드 해서 필요한 데이터만 사용할 수 있도록 처리합니다.
+* 주피터 노트북을 사용해서 데이터를 처리하겠습니다.
+ * https://github.com/jerrytohub/python-ai/blob/main/ipynb/17.%EA%B8%B0%EC%97%85%20%EC%97%B0%EB%B4%89%20%EC%98%88%EC%B8%A1%20%EA%B2%80%EC%83%89%EA%B8%B0%20%EB%A7%8C%EB%93%A4%EA%B8%B0.ipynb
+
+# input_text 사용하기
 
 
-
-
-
+# 기업 연봉 예측 검색기 만들기
+* 기업 이름을 입력하면 연봉과 사원수(가입자수)알려주는 streamlit 프로그램을 만들어보세요.
+* 웹페이지로 배포해서 사이트 주소를 제출해주세요.
