Update 17.기업 연봉 예측 검색기 만들기.md

--- a/17.기업 연봉 예측 검색기 만들기.md
+++ b/17.기업 연봉 예측 검색기 만들기.md
@@ -7,8 +7,62 @@
  * https://github.com/jerrytohub/python-ai/blob/main/ipynb/17.%EA%B8%B0%EC%97%85%20%EC%97%B0%EB%B4%89%20%EC%98%88%EC%B8%A1%20%EA%B2%80%EC%83%89%EA%B8%B0%20%EB%A7%8C%EB%93%A4%EA%B8%B0.ipynb
 
 # input_text 사용하기
-
+```python
+import streamlit as st
+name = st.text_input('이름을 입력하세요')
+# 이름을 입력하고 엔터키를 클릭하면 실행됩니다.
+if name:
+    st.write(name)
+```
 
 # 기업 연봉 예측 검색기 만들기
 * 기업 이름을 입력하면 연봉과 사원수(가입자수)알려주는 streamlit 프로그램을 만들어보세요.
-* 웹페이지로 배포해서 사이트 주소를 제출해주세요.
+* text_input를 사용하세요.
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+```python
+import streamlit as st 
+import numpy as np 
+import pandas as pd
+
+# 캐시를 합니다.
+@st.cache_data
+def read_company():
+    data = pd.read_csv('17.data_processing.csv')
+    return data
+
+data = read_company()
+
+# 회사 정보를 반환하는 함수입니다.
+def find_company(name):
+    return data.loc[data['사업장명']==name, ['사업장명','가입자수','연봉']].sort_values('연봉', ascending=False)
+
+company_name = st.text_input('회사 이름을 입력하세요')
+# 회사 이름을 입력하고 엔터키를 누르면 실행된다.
+if company_name:
+    # 예외 처리를 합니다.
+    try:
+        company_data = find_company(company_name)
+        # 세자리마다 쉼표를 찍습니다.
+        money = format(int(company_data.iloc[0]['연봉']), ',')
+        number = format(company_data.iloc[0]['가입자수'], ',')
+        st.write(f'연봉 : {money} | 사원수 : {number}')
+    except:
+        st.write('찾는 기업이 없습니다.')
+```
