--- a/19.얼굴상 분류하기.md
+++ b/19.얼굴상 분류하기.md
@@ -1,1 +1,46 @@
+# 티처블 머신으로 얼굴상 분류하기
+* 티처블 머신은 구글에서 만든 웹기반 노코드 인공지능 학습 툴입니다.
+* 티처블 머신으로 이미지, 사운드, 자세를 인식하도록 컴퓨터를 학습시켜서 사이트, 앱 등에 사용할 수 있습니다.
+* 티처블 머신이라고 검색해서 사용합니다.
+
+## bing_image_downloader
+* bing_image_downloader은 빙에서 검색한 이미지를 다운로드하는 모듈입니다.
+* ```pip install bing-image-downloader```로 설치합니다.
+* query에 입력한 단어로 검색을 하고 그 단어로 폴더를 만들어서 이미지를 다운로드 합니다.
+* 너무 많이 사용하면 사진을 다운로드 하지 못하는 경우가 있습니다.
+```python
+from bing_image_downloader import downloader
+
+query = '마동석'
+downloader.download(query, 
+                    limit=20,  
+                    output_dir='./', 
+                    adult_filter_off=True, 
+                    force_replace=False, 
+                    timeout=60)
+```
+
+* 고양이상, 강아지상 연예인을 다운로드 받습니다.
+
+## 티처블 머신으로 학습하기
+* 티처블 머신 사이트에 들어갑니다.
+* 시작하기를 클릭합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/a67a02c2-8b3b-4657-ad39-fe73fc9f0bd7)
+* 이미지 프로젝트를 클릭합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/db9fb97c-8130-4f83-915c-d53baa5c2665)
+* 표준 이미지 모델을 선택합니다.
+* 클래스 이름에 ```강아지```라고 적고 강아지상 연예인 사진을 업로드합니다.
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/26ece3ce-c9fa-4e9d-b1ac-232c1fecab2b)
+* 같은 방법으로 ```고양이``` 클래스를 만들고 고양이상 연예인 사진을 업로드합니다.
+* 다 업로드하면 모델 학습하기를 클릭합니다.
+* 사진을 업로드해서 테스트 합니다.
+* 모델 내보내기를 선택합니다.
+* Tensorflow를 선택합니다.
+* Keras를 선택하고 모델 다운로드를 클릭합니다.   
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/ff6835da-d4c3-4589-9474-5ae43fe5df5c)
+* 압축을 풀어서 ```keras_model.h5```과 ```labels.txt```을 app.py와 같은 경로에 놓습니다.
+* 
+
+
+
 
