--- a/19.얼굴상 분류하기.md
+++ b/19.얼굴상 분류하기.md
@@ -39,8 +39,55 @@ downloader.download(query,
 * Keras를 선택하고 모델 다운로드를 클릭합니다.   
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/ff6835da-d4c3-4589-9474-5ae43fe5df5c)
 * 압축을 풀어서 ```keras_model.h5```과 ```labels.txt```을 app.py와 같은 경로에 놓습니다.
-* 
+* keras_model.h5 학습 모델로 예측을 하고 labels.txt에 있는 클래스 이름으로 결과를 알려줍니다.
+* ```pip install tensorflow```로 텐서플로우를 설치합니다.
+* ```pip install keras```로 keras를 설치합니다.
+* 복사한 코드를 확인해보겠습니다.
+```python
+from keras.models import load_model  # TensorFlow is required for Keras to work
+from PIL import Image, ImageOps  # Install pillow instead of PIL
+import numpy as np
 
+# Disable scientific notation for clarity
+np.set_printoptions(suppress=True)
 
+# Load the model
+model = load_model("keras_Model.h5", compile=False)
 
+# Load the labels
+# 한글 이름을 클래스로 정한 경우 encoding='UTF-8'을 설정합니다.
+class_names = open("labels.txt", "r", encoding='UTF-8').readlines()
 
+# Create the array of the right shape to feed into the keras model
+# The 'length' or number of images you can put into the array is
+# determined by the first position in the shape tuple, in this case 1
+data = np.ndarray(shape=(1, 224, 224, 3), dtype=np.float32)
+
+# Replace this with the path to your image
+# app.py와 같은 경로에 사진을 놓습니다.
+image = Image.open("<여기에 사진파일 경로를 입력합니다.>").convert("RGB")
+
+# resizing the image to be at least 224x224 and then cropping from the center
+size = (224, 224)
+image = ImageOps.fit(image, size, Image.Resampling.LANCZOS)
+
+# turn the image into a numpy array
+image_array = np.asarray(image)
+
+# Normalize the image
+normalized_image_array = (image_array.astype(np.float32) / 127.5) - 1
+
+# Load the image into the array
+data[0] = normalized_image_array
+
+# Predicts the model
+prediction = model.predict(data)
+index = np.argmax(prediction)
+class_name = class_names[index]
+confidence_score = prediction[0][index]
+
+# Print prediction and confidence score
+# 예측 결과와 확률을 출력합니다.
+print("Class:", class_name[2:], end="")
+print("Confidence Score:", confidence_score)
+```
