--- a/19.얼굴상 분류하기.md
+++ b/19.얼굴상 분류하기.md
@@ -41,6 +41,7 @@ downloader.download(query,
 * 압축을 풀어서 ```keras_model.h5```과 ```labels.txt```을 app.py와 같은 경로에 놓습니다.
 * keras_model.h5 학습 모델로 예측을 하고 labels.txt에 있는 클래스 이름으로 결과를 알려줍니다.
 * ```pip install tensorflow```로 텐서플로우를 설치합니다.
+* * ```pip install keras```로 keras를 설치합니다.
 * 복사한 코드를 확인해보겠습니다.
 ```python
 from keras.models import load_model  # TensorFlow is required for Keras to work
