--- a/19.얼굴상 분류하기.md
+++ b/19.얼굴상 분류하기.md
@@ -140,4 +140,12 @@ else:
 # 얼굴상 데이터 추가하기
 * 다른 얼굴상을 추가합니다.
 * 업로드한 사진이 아래 나옵니다.
-  * st.image(image, use_column_width = True) 
+  * st.image(image, use_column_width = True)
+* 웹페이지에 업로드 하세요.
+* requirements.txt에 tensorflow와 keras를 추가하세요
+```python
+import tensorflow
+# 버전을 확인합니다.
+# 깃허브에서 수정할 수 있습니다.
+print(tensorflow.__version__)
+```
