--- a/15.streamlit 사용방법.md
+++ b/15.streamlit 사용방법.md
@@ -71,6 +71,8 @@ st.dataframe(df, use_container_width=True)
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/93b39b0a-b263-468d-b68b-c4ec09967dfe)
 
 * table로 표로 나타냅니다.
+* dataframe 다르게 고정되어 있습니다.
+ * 정렬 등이 안 됩니다. 
 ```python
 import pandas as pd
 import numpy as np
