--- a/17.기업 연봉 예측 검색기 만들기.md
+++ b/17.기업 연봉 예측 검색기 만들기.md
@@ -16,7 +16,7 @@ if name:
 ```
 
 # 기업 연봉 예측 검색기 만들기
-* 기업 이름을 입력하면 연봉과 사원수(가입자수)알려주는 streamlit 프로그램을 만들어보세요.
+* 기업 이름을 입력하면 연봉과 사원수(가입자수)을 알려주는 streamlit 프로그램을 만들어보세요.
 * text_input를 사용하세요.
 <br/>
 <br/>
