--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -1,3 +1,19 @@
+# 강화학습
+## 강화학습 5요소
+* 환경(env) : 변화하는 가상의 공간
+* 에이전트(agent) : 환경을 탐색하면서 시행착오를 반복하는 개체(학습자)
+* 상태(state) : 에이전트에게 주어진 세분화된 환경
+* 동작(action) : 에이전트가 상태에 대응하기 위해서 선택하는 동작
+* 보상(reward) : 에어전트가 동작을 한 결과(보상 또는 벌)
+
+## Frozen Lake
+* Fronze lake는 ChatGPT를 만든 OpenAI의 GYM 프로젝트 중 하나입니다.
+* 에이전트가 꽁꽁 언 호수를 지나서 목표지점에 도착하는 미션입니다.
+* 강화학습은 에이전트를 환경에 적응시키는 것입니다.
+ * 시행착오를 통해 성공과 실패를 반복하면서 행동을 개선합니다.
+* 알파고, ChatGPT가 강화학습으로 개발되었습니다.
+ 
+
 * VSCODE에서 설정합니다.
 * Ctrl + Shift + P 단축키로 명령 팔레트를 엽니다.
 * select default profile을 검색하고 ```Terminal : Select Default Profile```을 선택합니다.
