--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -12,8 +12,11 @@
 * 강화학습은 에이전트를 환경에 적응시키는 것입니다.
  * 시행착오를 통해 성공과 실패를 반복하면서 행동을 개선합니다.
 * 알파고, ChatGPT가 강화학습으로 개발되었습니다.
- 
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/c34561e9-d21b-41f7-bc4d-f85caa7ad0eb)
 
+
+# 실제 환경에서 하기
+## VSCODE 설정
 * VSCODE에서 설정합니다.
 * Ctrl + Shift + P 단축키로 명령 팔레트를 엽니다.
 * select default profile을 검색하고 ```Terminal : Select Default Profile```을 선택합니다.
