--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -14,6 +14,17 @@
 * 알파고, ChatGPT가 강화학습으로 개발되었습니다.
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/c34561e9-d21b-41f7-bc4d-f85caa7ad0eb)
 
+## Q-러닝 
+* Q-테이블을 이용하여 에이전트의 동작을 개선하는 것입니다.
+* Q-테이블은 상태별 보상을 행, 선택 가능한 동작을 열로 표시합니다.
+* 에이전트는 동작의 결과가 반영된 Q-테이블을 참조하여 최선의 동작을 선택합니다.
+
+| Q | A0 | A1 | A2 | A3 |
+|:---:|:---:|:---:|:---:|:---:|
+| S0 | 0 | 0 | 5 | 10 |
+| S1 | 5 | 10 | 10 | 0 |
+| S2 | 0 | 15 | 0 | 0 |
+| S3 | 0 | 20 | 0 | 0 |
 
 # 실제 환경에서 하기
 ## VSCODE 설정
