--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -18,6 +18,9 @@
 * Q-테이블을 이용하여 에이전트의 동작을 개선하는 것입니다.
 * Q-테이블은 상태별 보상을 행, 선택 가능한 동작을 열로 표시합니다.
 * 에이전트는 동작의 결과가 반영된 Q-테이블을 참조하여 최선의 동작을 선택합니다.
+* A는 동작, S는 상태를 나타냅니다.
+* S0에서 A0을 선택하면 0점이 되고 A2를 선택하면 5점이 됩니다.
+ * Frozen Lake에서 A는 에이전트가 움직이는 방향입니다.
 
 | Q | A0 | A1 | A2 | A3 |
 |:---:|:---:|:---:|:---:|:---:|
@@ -25,6 +28,21 @@
 | S1 | 5 | 10 | 10 | 0 |
 | S2 | 0 | 15 | 0 | 0 |
 | S3 | 0 | 20 | 0 | 0 |
+* 에이전트는 시행을 반복하면서 Q-테이블을 업데이트합니다.
+* 처음에는 경험치가 없기 때문에 랜덤하게 움직입니다.
+* 그 이후에는 시행착오를 거듭하면서 Q-테이블을 더 많이 참조하면서 동작을 개선합니다.
+* 학습반영률, 보상할인율, 무작위동작률 개념을 이해합니다.
+ * 학습반영률 α(알파)
+  * 학습반영률은 Q-테이블 정보를 얼마나 반영할 것인지 정합니다.
+  * 학습반영률이 높으면 최신 Q-테이블 정보를 적극적으로 반영합니다.
+  * 학습반영률이 낮으면 최신 Q-테이블 정보를 소극적으로 반영합니다.
+ * 보상할인율 γ(감마)
+  * 보상할인율은 에이전트가 현재의 보상에 집중할 것인지, 미래의 보상에 집중할 것인지 정합니다.
+  * 보상할인율이 높으면 현재의 보상보다는 미래의 보상에 집중합니다.
+  * 보상할인율이 높으면 미래의 보상보다는 현재의 보상에 집중합니다.
+ * 무작위동률 ε(입실론)
+  * 얼마나 랜덤하게 움직일 것인지 정합니다.
+  * 처음에는 높은 값에서 시작하다가 나중에 감소합니다.
 
 # 실제 환경에서 하기
 ## VSCODE 설정
