--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -42,7 +42,7 @@
     * 보상할인율은 에이전트가 현재의 보상에 집중할 것인지, 미래의 보상에 집중할 것인지 정합니다.
     * 보상할인율이 높으면 현재의 보상보다는 미래의 보상에 집중합니다.
     * 보상할인율이 높으면 미래의 보상보다는 현재의 보상에 집중합니다.
-  * 무작위동률 ϵ(입실론)
+  * 무작위동작률 ϵ(입실론)
     * 얼마나 랜덤하게 움직일 것인지 정합니다.
     * 처음에는 높은 값에서 시작하다가 나중에 감소합니다.
 
