--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -43,6 +43,7 @@
     * 보상할인율이 높으면 현재의 보상보다는 미래의 보상에 집중합니다.
     * 보상할인율이 높으면 미래의 보상보다는 현재의 보상에 집중합니다.
   * 무작위동작률 ϵ(입실론)
+    * 입실론은 0~1사이의 값입니다. 
     * 얼마나 랜덤하게 움직일 것인지 정합니다.
     * 처음에는 높은 값에서 시작하다가 나중에 감소합니다.
 
