--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -47,6 +47,8 @@
     * 얼마나 랜덤하게 움직일 것인지 정합니다.
     * 처음에는 높은 값에서 시작하다가 나중에 감소합니다.
     * 무작위로 동작하지 않는다면 같던 길로만 이동합니다.
+    * exploration : 새로운 길을 찾는 것
+    * exploitation : Q-테이블을 이용하는 것
 
 # 실제 환경에서 하기
 ## VSCODE 설정
