--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -58,4 +58,113 @@
 * Ctrl + Shift + P 단축키로 명령 팔레트를 엽니다.
 * select default profile을 검색하고 ```Terminal : Select Default Profile```을 선택합니다.
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/72e26a0a-3f44-45a9-bd0a-cf704b9f1c8a)
+
+## 코딩하기
+* gymnasium와 pygame을 설치해서 실제 컴퓨터에서 작동시켜 보세요.
+* gymnasium와 pygame을 설치합니다.
+  * ```pip install gymnasium```
+  * ```pip install pygame```
+```python
+import gymnasium as gym
+```
+* pygame을 사용해서 프로그램을 작동시킵니다.
+```python
+import gymnasium as gym
+from time import sleep
+
+# 환경을 만듭니다.
+# map_name='8x8'이면 64칸이 만들어집니다.
+env = gym.make('FrozenLake-v1', map_name='4x4', is_slippery = False, render_mode='human')
+
+# 왼쪽 위부터 순서대로 0으로 해서 인덱스가 정해집니다.
+# gymnasium에서는 아래와 같이 state를 정합니다.
+state = env.reset()[0]
+action = env.action_space.sample()
+# gymnasium에서는 5개 값을 반환합니다.
+new_state, reward, done, info, _= env.step(action)
+
+sleep(10)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```python
+import gymnasium as gym
+import numpy as np
+import matplotlib.pyplot as plt
+
+env = gym.make('FrozenLake-v1', map_name='4x4', is_slippery = False, render_mode='human')
+q_table = np.zeros((env.observation_space.n, env.action_space.n))
+episodes = 100
+learning_rate = 0.8
+gamma = 0.9
+epsilon = 0.9
+epsilon_decay_rate = 0.0001
+
+rewards = np.zeros(episodes)
+for i in range(episodes):    
+    state = env.reset()[0]   
+    done = False   
+   
+    while(not done):   
+        if np.random.uniform(0, 1) < epsilon:
+            action = env.action_space.sample()       
+        else:
+            action = np.argmax(q_table[state,:])            
+        new_state, reward, done, info, _ = env.step(action) 
+        q_table[state,action] = q_table[state,action] + learning_rate * ( reward + gamma * np.max(q_table[new_state,:]) - q_table[state,action])
+        state = new_state  
+   
+    epsilon = max(epsilon - epsilon_decay_rate, 0) 
+    if epsilon == 0 :
+        learning_rate = 0.0001  
+    if reward == 1:
+        rewards[i] = 1         
+
+sum_rewards = np.zeros(episodes)
+for i in range(episodes):
+    sum_rewards[i] = np.sum(rewards[max(0, i-100):(i+1)])
+plt.plot(sum_rewards)
+plt.savefig('frozen_lake.png')
+```
+
+
+
+
+
  
