--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -1,4 +1,4 @@
-# 강화학습
+![image](https://github.com/jerrytohub/python-ai/assets/127598703/30b907cf-4ec8-47e7-8011-82962ee9b203)# 강화학습
 ## 강화학습 5요소
 * 환경(env) : 변화하는 가상의 공간
 * 에이전트(agent) : 환경을 탐색하면서 시행착오를 반복하는 개체(학습자)
@@ -53,6 +53,28 @@
     * 무작위로 동작하지 않는다면 같던 길로만 이동합니다.      
 
 # 실제 환경에서 하기
+## 가상환경
+* 가상 환경(Virtual Environments)이란, 독립적인 파이썬의 실행 환경을 의미합니다.
+* 가상 환경은 다른 환경에 영향을 미치지 않으며, 각자 다른 종류와 버전의 패키지를 가질 수 있습니다.
+* 가상 환경으로 여러 패키지 버전 관리를 쉽게 할 수 있습니다.
+* 프로젝트마다 패키지를 따로 관리할 때 가상 환경을 사용합니다.
+* ```conda create -n 가상환경이름```으로 가상환경을 만듭니다.
+  * -n은 --name
+* ```conda create -n 가상환경이름 python=버전```으로 파이썬 버전을 정할 수 있습니다.
+* 아나콘다 폴더 > envs 폴더에 가상환경 이름으로 폴더가 생깁니다.
+* ```conda env list```으로 만들어진 환경(env) 목록 확인합니다.
+* ```conda activate 가상환경이름```으로 가상환경을 활성화합니다.
+  * 프롬프트 앞에 가상환경 이름이 나옵니다.
+  * pip로 패키지를 설치합니다.   
+* ```conda deactivate```으로 가상환경을 비활성화합니다.
+* ```conda remove -n 가상환경이름 --all```로 삭제합니다.
+* pip 또는 conda 명령어로 패키지를 설치합니다.
+  * pip install 패키지이름
+  * conda install 패키지이름
+* 패키지 버전을 ==으로 정할 수 있습니다.
+  * pip install 패키지이름==21.1.2
+* ```pip uninstall 패키지이름```으로 패키지를 삭제합니다.
+
 ## VSCODE 설정
 * VSCODE에서 설정합니다.
 * Ctrl + Shift + P 단축키로 명령 팔레트를 엽니다.
