--- a/12.머신러닝 강화학습.md
+++ b/12.머신러닝 강화학습.md
@@ -1,4 +1,7 @@
-![image](https://github.com/jerrytohub/python-ai/assets/127598703/30b907cf-4ec8-47e7-8011-82962ee9b203)# 강화학습
+# 강화학습
+* 어떤 행동을 해야 하는지 알지 못하는 상태에서 행동에 대한 보상을 극대화하기 위해 어떻게 행동해야 할 지 방향을 찾는 학습 방법입니다.
+  * (보상과 벌)
+
 ## 강화학습 5요소
 * 환경(env) : 변화하는 가상의 공간
 * 에이전트(agent) : 환경을 탐색하면서 시행착오를 반복하는 개체(학습자)
