Update 14.인공지능으로 얼굴 표정 분석하기.md

--- a/14.인공지능으로 얼굴 표정 분석하기.md
+++ b/14.인공지능으로 얼굴 표정 분석하기.md
@@ -1,6 +1,6 @@
 # pip 이해하기
 * pip은 파이썬으로 작성된 패키지 소프트웨어를 설치·관리하는 패키지 관리 시스템입니다.
-* pip로 PyPI에 있는 패키지를 설치합니다.
+* pip로 PyPI에 있는 패키지(라이브러리)를 설치합니다.
 * https://pypi.org/ 사이트에 여러 패키지(라이브러리)를 검색할 수 있습니다.
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/6a1b4397-c2db-495e-9469-3877b975f64a)
 * 아나콘다 폴더에서 Lib > site-packages에 pip로 설치한 패키지(라이브러리)가 설치됩니다.
