--- a/04.파이썬으로 미술 작품 만들기.md
+++ b/04.파이썬으로 미술 작품 만들기.md
@@ -2,7 +2,7 @@
 * turtle 모듈은 파이썬에서 기본적으로 제공하는 기본 모듈로 코드에 따라 그림을 그려주는 모듈입니다.
 * Lib 폴더에 turtle.py 파일이 있습니다.
 * bgcolor("색깔") : 배경색을 정합니다.
-* color("색깔) : 선색을 정합니다.
+* color("색깔") : 선색을 정합니다.
 * forward(숫자) : 앞으로 이동합니다.
 * left(숫자) : 왼쪽으로 회전합니다.
 * right(숫자) : 오른쪽으로 회전합니다.
